--- a/k8s_files/deployment.yaml
+++ b/k8s_files/deployment.yaml
@@ -2,22 +2,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pandacloud-app
+  name: devops-app
   labels:
-    app: pandacloud-app
+    app: devops-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: pandacloud-app
+      app: devops-app
   template:
     metadata:
       labels:
-        app: pandacloud-app
+        app: devops-app
     spec:
       containers:
-      - name: pandacloud-container
-        image: 309395755719.dkr.ecr.us-east-1.amazonaws.com/amazon-prime:latest
+      - name: devops-container
+        image: 637423542227.dkr.ecr.us-east-1.amazonaws.com/devops-project-2:latest
         ports:
         - containerPort: 3000
 ...
